--- a/package.json
+++ b/package.json
@@ -5,15 +5,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "framer-motion": "11.0.8",
-    "lucide-react": "0.344.0",
-    "clsx": "latest",
-    "tailwind-merge": "latest"
+    "react": "^18",
+    "react-dom": "^18",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.344.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
